input field overflow, responsive fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,7 +47,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .credit-card .valid-thru {
-  @apply flex items-center gap-1;
+  @apply flex items-center;
 }
 
 .credit-card .valid-thru input {
@@ -64,7 +64,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .credit-card .cvv{
-  @apply max-w-[50px] h-full ml-1 text-center font-semibold bg-transparent border-2 text-white;
+  @apply max-w-[50px] h-full text-center font-semibold bg-transparent border-2 text-white;
 }
 
 .btn{
